--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,7 +13,7 @@ management:
 
 eureka:
   client:
-    enabled: true
+    enabled: false
     service-url:
       defaultZone: http://localhost:8761/eureka/
 
