feat: add fullName, imageUrl for token

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8086
+  port: 8082
 logging:
   level:
     root: INFO
@@ -13,9 +13,9 @@ management:
 
 eureka:
   client:
-    enabled: false
+    enabled: true
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://registry:8761/eureka/
 
 spring:
   application:
@@ -40,9 +40,16 @@ spring:
       hibernate.query.in_clause_parameter_padding: true
       hibernate.format_sql: true
   datasource:
-    url: jdbc:postgresql://localhost:5432/social_media_app_uaa
+    url: jdbc:postgresql://uaa-db:5432/social_media_app_uaa
     username: postgres
     password: 101119
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: 10
+#  datasource:
+#    url: jdbc:postgresql://localhost:5432/social_media_app_uaa
+#    username: postgres
+#    password: 101119
+#    driver-class-name: org.postgresql.Driver
+#    hikari:
+#      maximum-pool-size: 10
